--- a/index.html
+++ b/index.html
@@ -4,5 +4,30 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     </head>
-    <body></body>
+    <body>
+        <!-- Header and navbar structure-->
+            <nav class="navbar navbar-expand-sm bg-success navbar-dark">
+                <a class="navbar-brand" href="">Bootstrap</a>
+                    <ul class="navbar-nav">
+                        <li class="nav-item active"><a class="nav-link"  href="">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                    </ul>
+            </nav>
+        <!------------->
+
+        <!-- Body structure-->
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <h1>First Column</h1>
+                    <p>Fucking anything</p>
+                </div>
+                <div class="col-sm-4">
+                    <h1>Second Column</h1>
+                    <p>Fucking anything</p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
